# aidoku_dlsite_source

./: .gitignore  README.md  bl_fs_snapshot.md  garumani_fs_snapshot.md  girls_fs_snapshot.md  home_fs_snapshot.md  index.json  index.min.json  maniax-fs.md  pro-fs.md  pro_fs_snapshot.md
.github/: dependabot.yml
.github/workflows/: build.yaml  clippy.yaml  pr.yaml
public/: index.html
shared/dlsite-common/: Cargo.toml
shared/dlsite-common/src/: api.rs  explore.rs  filters.rs  home.rs  lib.rs  models.rs  settings.rs
sources/: multi.dlsite-explore-adult-v1.aix  multi.dlsite-explore-v1.aix  multi.dlsite-play-v1.aix
sources/multi.dlsite-explore/: Cargo.toml
sources/multi.dlsite-explore-r18/: Cargo.toml
sources/multi.dlsite-explore-r18/res/: filters.json  settings.json  source.json
sources/multi.dlsite-explore-r18/src/: lib.rs
sources/multi.dlsite-explore/res/: filters.json  settings.json  source.json
sources/multi.dlsite-explore/src/: api.rs  lib.rs  models.rs  settings.rs
sources/multi.dlsite-play/: Cargo.toml
sources/multi.dlsite-play/res/: filters.json  settings.json  source.json
sources/multi.dlsite-play/src/: api.rs  helpers.rs  lib.rs  models.rs  public.rs  settings.rs
sources/multi.dlsite-play/src/api/: mod.rs  play.rs  public.rs
sources/multi.dlsite-play/src/explore/: api.rs  models.rs
sources/multi.dlsite-play/src/play/: api.rs  helpers.rs  http.rs  mod.rs  models.rs
tests/: test_full_cookies.py  test_play_auth.py
